# ChangeLog for dev-python/boto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/boto/ChangeLog,v 1.13 2009/04/30 17:59:37 patrick Exp $

  30 Apr 2009; Patrick Lauer <patrick@gentoo.org> -boto-1.0a.ebuild:
  Remove old

  27 Apr 2009; Markus Meier <maekke@gentoo.org> boto-1.6b.ebuild:
  amd64/x86 stable, bug #267340

  26 Apr 2009; Brent Baude <ranger@gentoo.org> boto-1.6b.ebuild:
  stable ppc, bug 267340

*boto-1.7a (24 Apr 2009)

  24 Apr 2009; Patrick Lauer <patrick@gentoo.org> +boto-1.7a.ebuild:
  Bump to 1.7a

  24 Apr 2009; Patrick Lauer <patrick@gentoo.org> -boto-1.3a.ebuild,
  -boto-1.4a.ebuild, -boto-1.4c.ebuild:
  Remove old

  17 Apr 2009; Brent Baude <ranger@gentoo.org> boto-1.3a.ebuild,
  boto-1.4a.ebuild, boto-1.4c.ebuild, boto-1.6b.ebuild:
  Marking 1.3, 1.4, 1.6 ~ppc for bug 265361

*boto-1.6b (08 Jan 2009)

  08 Jan 2009; Patrick Lauer <patrick@gentoo.org> +boto-1.6b.ebuild:
  Bump to 1.6b, closes #254218

*boto-1.4c (11 Nov 2008)

  11 Nov 2008; Caleb Tennis <caleb@gentoo.org> +boto-1.4c.ebuild:
  version bump

*boto-1.4a (20 Sep 2008)

  20 Sep 2008; Caleb Tennis <caleb@gentoo.org> +boto-1.4a.ebuild:
  version bump per #236670

*boto-1.3a (13 Jul 2008)

  13 Jul 2008; Caleb Tennis <caleb@gentoo.org> +boto-1.3a.ebuild:
  version bump

  14 Mar 2008; Caleb Tennis <caleb@gentoo.org> boto-1.0a.ebuild:
  amd64 stable

*boto-1.0a (18 Jan 2008)

  18 Jan 2008; Caleb Tennis <caleb@gentoo.org> +boto-1.0a.ebuild:
  Initial import
